--- a/project/BMI_calculator/style.css
+++ b/project/BMI_calculator/style.css
@@ -1,55 +1,32 @@
-body{
-    background-color: white;
-}
 h1{
     text-align: center;
+    font-size: 50px;
+    font-weight: 10;
 }
-div{
+
+#guide{
+    font-size: 40px;
+}
+
+#card{
     display: flex;
     align-items: center;
     justify-content: center;
 }
-body {
-    margin: 0;
-  }
 
-  span {
-    display: block;
-  }
-
-nav{
-    background-color: rgb(229, 226, 205);
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    padding: 10px;
-    margin-bottom: 10px;
-    font-size: 30px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
-}
-
-nav a{
-    text-decoration: none;
-    color: rgb(52, 45, 45);
-}
-
-nav a:hover{
-    color : white; 
-    background-color: rgb(0, 0, 0);
-    border-radius: 5px;
-    /* padding: 5px; */
-}
 p{
     font-size: 30px;
 }
+
 input{
     padding: 10px;
     font-size: 25px;
     text-align: center;
 }
-button{
+
+#btn{
     padding: 10px;
-    width: 200px;
+    width: 250px;
     font-size:25px;
     background-color: grey;
     border-radius: 50px;
@@ -58,4 +35,9 @@ button{
 #result{
  font-size: 30px;  
  color: red; 
+}
+
+#weight-guide{
+    display: flex;
+    justify-content: space-evenly;
 }
