--- a/project/no.guessing/style.css
+++ b/project/no.guessing/style.css
@@ -1,3 +1,34 @@
-.text{
+#subHeading{
+    font-weight: 100;
+    margin-top: 0;
     text-align: center;
+    margin-top: 0%;
+    margin-bottom: 0%;
+}
+
+#mainHeading{
+    font-size: 90px;
+    font-weight: 100;
+    font-stretch: condensed;
+    text-align: center;
+    margin-bottom: 0%;
+    margin-top: 2%;
+}
+
+.form{
+    margin-top: 40px;
+    text-align: center;
+    padding: 50px;
+} 
+
+ #guessfield{
+    padding: 20px;
+    border-radius: 5px;
+    text-align: center;
+    width: 400px;
+}
+#submit{
+    border-radius: 5px;
+    width: 200px;
+    padding: 10px;
 }
