--- a/project/BMI_calculator/style.css
+++ b/project/BMI_calculator/style.css
@@ -1,3 +1,37 @@
+.navbar {
+    background-color: hsl(0, 0%, 100%);
+    /* padding: 1rem; */
+    padding: 2px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  }
+  
+  .nav-list {
+    list-style: none;
+    display: flex;
+    justify-content: space-evenly;
+  }
+  
+  .nav-list li {
+    margin: 0 20px;
+  }
+
+  .logo img {
+    height: 50px; /* Adjust the size as needed */
+  }
+  
+  .nav-list a {
+    color: rgb(0, 0, 0);
+    text-decoration: none;
+    font-size: 28px;
+    padding: 8px 16px;
+    transition: background-color 0.3s;
+  }
+  
+  .nav-list a:hover {
+    background-color: #d0cccc;
+    border-radius: 4px;
+  }
+
 h1{
     text-align: center;
     font-size: 50px;
@@ -43,3 +77,33 @@ input{
     justify-content: space-evenly;
 }
 
+@media (max-width: 368px) {
+  .nav-list {
+    flex-direction: column;
+    position: absolute;
+    top: 60px;
+    right: 0;
+    background-color: #333;
+    width: 100%;
+    display: none;
+  }
+
+  .nav-list li {
+    text-align: center;
+    margin: 10px 0;
+  }
+
+  .menu-icon {
+    display: block;
+  }
+
+  .navbar {
+    justify-content: space-between;
+  }
+}
+
+#banner,#clock {
+  display: flex;
+  justify-content: center;
+  font-size: 30px;
+}
